<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/entry_mood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/mood_entry"/>

    <TextView
        android:id="@+id/entry_emotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emotion"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/entry_mood"
        app:layout_constraintStart_toStartOf="@+id/entry_mood"
        app:layout_constraintTop_toBottomOf="@+id/entry_mood" />

    <TextView
        android:id="@+id/entry_datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/datetime"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/entry_mood"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/entry_notes"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/note"
        app:layout_constraintStart_toEndOf="@id/entry_mood"
        app:layout_constraintTop_toBottomOf="@id/entry_datetime"/>

</androidx.constraintlayout.widget.ConstraintLayout>